# Code2026

./: README.md  _frc_cli.py  controller.py  physics.py  pyproject.toml  robot.py  robotcontainer.py  simgui-ds.json  tuner-project.json
.wpilib/: wpilib_preferences.json
core/: __init__.py  controller.py  robot_container.py  robotcontainer.py
deploy/choreo/: ChoreoPaths.chor  Depot_Intake_Center_Pieces.traj  Plain_Intake_Center_Pieces.traj
src/: pyproject.toml
src/core/: __init__.py
src/subsystems/: __init__.py
src/tests/: pyfrc_test.py
src/utils/: __init__.py  robot_constants.py
subsystems/: Vision.py  __init__.py  command_swerve_drivetrain.py  drivetrain.py  intake.py  shooter.py  spindex.py  vision.py  vision_system.py
tests/: pyfrc_test.py
utils/: TalonConfig.py  __init__.py  alliance_flip_util.py  field_constants.py  robot_constants.py  talon_config.py  telemetry.py  tuner_constants.py
