[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barlow-code-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

# This controls the libraries installed in the HOST environment
# This is important for simulation and local debugging
dependencies = [
    # The host environment needs these tools for development, debugging, etc.
    "debugpy",
    "ruff",

    # This list should match the robotpy components in src/pyproject.toml
    "robotpy[apriltag,commands2,pathplannerlib,phoenix6,rev,sim]",

    # This list should match the requires in src/pyproject.toml
    "numpy",
    "phoenix6",
    "photonlibpy",
]

[project.scripts]
frc = "_frc_cli:main"

[tool.hatch.build.targets.wheel]
only-include = ["_frc_cli.py"]
